# veng

./: .clang-format  .clang-tidy  .gitignore  API_RECOMMENDATIONS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  hud.sh  start.sh
assetformat/: CMakeLists.txt
assetformat/src/: Archive.cpp  AssetPack.cpp
assetpack/: CLAUDE.md  CMakeLists.txt
assetpack/src/: Archive.cpp  AssetType.cpp  CookedProject.cpp
cooker/: CLAUDE.md  CMakeLists.txt
cooker/src/: AssetPack.cpp  BuiltinImporters.cpp  Cooker.cpp  CoreImporters.cpp  ModuleTypes.cpp  Verify.cpp
cooker/src/Importers/: AnimationImporter.cpp  AnimationImporter.h  EnvironmentImporter.cpp  EnvironmentImporter.h  GraphShaderHook.cpp  GraphShaderSource.cpp  GraphShaderSource.h  LevelImporter.cpp  LevelImporter.h  MaterialImporter.cpp  MaterialImporter.h  MaterialInstanceImporter.cpp  MaterialInstanceImporter.h  MeshImporter.cpp  MeshImporter.h  PrefabImporter.cpp  PrefabImporter.h  RawImporter.cpp  RawImporter.h  ShaderImporter.cpp  ShaderImporter.h  SkeletonImporter.cpp  SkeletonImporter.h  SkeletonSource.cpp  SkeletonSource.h  SlangReflect.cpp  SlangReflect.h  SlangSession.cpp  SlangSession.h  TextureImporter.cpp  TextureImporter.h  VertexLayoutImporter.cpp  VertexLayoutImporter.h  VertexLayoutSource.cpp  VertexLayoutSource.h
cooker/tool/: bootstrap_main.cpp  main.cpp
editor/: CLAUDE.md  CMakeLists.txt
editor/assets/icons/: camera.tex.json  editor_icons.vengpack.json  light.tex.json
editor/include/VengEditor/: CookRequest.h  EditorHost.h  EditorPanel.h  EditorRegistry.h  PanelHost.h
editor/src/: AssetChip.cpp  AssetChip.h  AssetDragPayload.h  AssetEditorPanel.cpp  AssetEditorPanel.h  AssetSourceIndex.cpp  AssetSourceIndex.h  CommandStack.cpp  CommandStack.h  CookSession.cpp  CookSession.h  EditorCamera.cpp  EditorCamera.h  EditorCommand.cpp  EditorCommand.h  EditorGizmo.cpp  EditorGizmo.h  EditorHost.cpp  EditorIcons.h  EditorMcp.cpp  EditorMcp.h  EditorPanel.cpp  FieldGate.cpp  FieldGate.h  FieldWidget.cpp  FieldWidget.h  FieldWidgetDispatch.cpp  FieldWidgetDispatch.h  PrefabSerialize.cpp  PrefabSerialize.h  PreviewCapability.cpp  PreviewCapability.h  StatusTracker.cpp  StatusTracker.h  editor_main.cpp
editor/src/NodeGraph/: NodeGraph.cpp  NodeGraphSerialize.cpp  NodeType.cpp
editor/src/material/: MaterialCatalog.cpp  MaterialCatalog.h  MaterialCompile.cpp  MaterialCompile.h  MaterialPreview.cpp  MaterialPreview.h  MaterialShaderInterface.h
editor/src/panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  ConsolePanel.cpp  ConsolePanel.h  InspectorPanel.cpp  InspectorPanel.h  LevelEditorPanel.cpp  LevelEditorPanel.h  MaterialEditorPanel.cpp  MaterialEditorPanel.h  MaterialInstanceEditorPanel.cpp  MaterialInstanceEditorPanel.h  PrefabEditContext.h  PrefabEditorPanel.cpp  PrefabEditorPanel.h  PrefabExplorerPanel.cpp  PrefabExplorerPanel.h  ProjectSettingsPanel.cpp  ProjectSettingsPanel.h  SceneViewportPanel.cpp  SceneViewportPanel.h  TextureEditorPanel.cpp  TextureEditorPanel.h
engine/: CLAUDE.md  CMakeLists.txt
engine/assets/core/: README.md  core.vengpack.json
engine/include/Veng/: Application.h  Assert.h  Event.h  Input.h  InputEvents.h  InputRouter.h  Log.h  Result.h  Time.h  Veng.h  Window.h  WindowEvents.h
engine/src/: Application.cpp  Assert.cpp  ExecutableDirectory.cpp  Input.cpp  InputRouter.cpp  Log.cpp  Time.cpp  Window.cpp
engine/src/Asset/: AssetManager.cpp  Environment.cpp  Level.cpp  Material.cpp  MaterialInstance.cpp  Mesh.cpp  Prefab.cpp  Primitives.cpp  ResidencyBatch.cpp  Skeleton.cpp  Texture.cpp
engine/src/ImGui/: ImGuiLayer.cpp  ImGuiTexture.cpp
engine/src/Launcher/: launcher_main.cpp
engine/src/Math/: AABB.cpp  BVH.cpp  Frustum.cpp
engine/src/Module/: ApplicationRegistry.cpp  ModuleLoader.cpp
engine/src/Project/: Compression.cpp
engine/src/Reflection/: FieldDisplay.cpp  Serialize.cpp  Serialize.h
engine/src/Renderer/: DebugDraw.cpp  DebugDrawScenePass.cpp  DebugDrawScenePass.h  EnvironmentIbl.cpp  EnvironmentIbl.h  GatherPass.cpp  HiZHistory.cpp  ImGuiCompositePass.cpp  LightPacking.cpp  Material.cpp  Picking.h  PunctualShadowScenePass.cpp  PunctualShadowScenePass.h  PunctualShadows.cpp  RenderGraph.cpp  SceneRenderer.cpp  ShaderInterface.cpp  ShadowCascades.cpp  ShadowScenePass.cpp  ShadowScenePass.h  SkyboxScenePass.cpp  SkyboxScenePass.h  SsaoScenePass.cpp  SsaoScenePass.h  SwapChainCompositePass.cpp  Viewport.cpp
engine/src/Scene/: AnimationSystem.cpp  BuiltinSystems.cpp  BuiltinTypes.cpp  Camera.cpp  CameraRig.cpp  ComponentPool.cpp  ComponentPool.h  Motion.cpp  Movement.cpp  PrimitiveResolve.cpp  Resolve.cpp  RootMotion.cpp  Scene.cpp  SceneBroadphase.cpp  SceneSimulation.cpp  SceneViewport.cpp  SystemRegistry.cpp  Transforms.cpp  Visibility.cpp
engine/src/Task/: TaskSystem.cpp
engine/src/UI/: DebugPanels.cpp  Layout.cpp  Query.cpp  Scopes.cpp  Theme.cpp  Widgets.cpp
examples/hello-triangle/: CMakeLists.txt  README.md  hello_triangle_editor.cpp  main.cpp  project.veng
examples/hello-triangle/assets/: player.prefab.json  sample.level.json  sample.vengpack.json  scene.prefab.json  sphere.prefab.json
examples/hello-triangle/configs/: linux.buildcfg  macos.buildcfg  project.veng  windows.buildcfg
examples/hello-triangle/shaders/: composite.frag  composite.vert  mesh.frag  mesh.vert  triangle.frag  triangle.vert
examples/template/: CMakeLists.txt  README.md  main.cpp  project.veng
examples/template/assets/: template.vengpack.json
examples/template/configs/: linux.buildcfg  project.veng  windows.buildcfg
graph/: CMakeLists.txt
graph/include/VengGraph/: EmittedValue.h  MaterialCatalog.h  MaterialCompile.h  MaterialShaderInterface.h  NodeGraph.h  NodeGraphSerialize.h  NodeType.h
graph/src/: MaterialCatalog.cpp  MaterialCompile.cpp  MaterialMathNodes.cpp  NodeGraph.cpp  NodeGraphSerialize.cpp  NodeType.cpp
mcp/: CLAUDE.md  CMakeLists.txt
mcp/src/: McpServer.cpp  MutationTools.cpp  MutationTools.h  ReflectToJson.cpp  ReflectToJson.h  RenderTools.cpp  RenderTools.h  ViewportCapture.cpp  ViewportCapture.h  WorldTools.cpp  WorldTools.h
(+1282 files in other folders)
